src/test/ui/issues/issue-5439.stderr
error[E0560]: struct `Foo` has no field named `nonexistent`
  --> $DIR/issue-5439.rs:13:26
   |
LL |         return box Foo { nonexistent: self, foo: i };
   |                          ^^^^^^^^^^^ `Foo` does not have this field
   |
   = note: available fields are: `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0560`.
